# orecc-front

./: Cargo.toml  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 08h2h51hi504b0n2ak6jn7b4hrfrn1h7-source  2vdhip6qascdww3x09jhss1gklcm1cks-source  c02hzmh6b2x5imf1b26v93mabdnggh2a-source
.github/workflows/: rust.yml
examples/: simple_c_lexer.rs
src/: chacacter_buffer.rs  chars.rs  codebase.rs  lib.rs  token_reader.rs
