[package]
name = "orecc-front"
version = "0.1.0"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Easy read/write ELF 32/64 relocatibles/executables/dynamics"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/orecc-front/"
license = "MIT"
keywords = ["api", "elf", "object"]
categories = [
    "compilers",
    "development-tools::build-utils",
    "parsing",
    "text-processing",
]


[features]
xid = ["dep:unicode-ident"]

[dependencies]
lazy-regex = { version = "3.0.1" }
unicode-ident = { version = "1.0.11", optional = true }
codespan-reporting = "0.11.1"
